adds 2 levels of filtering to taxonomy

--- a/docs/album.css
+++ b/docs/album.css
@@ -46,6 +46,15 @@
    /* padding-top: 2px; */
  }
 
+ /* FUNCTIONS */
+/* .sort-by-button-group {
+  display: none;
+} */
+
+/* .button-group .ceiling {
+  justify-content: center !important;
+} */
+
 footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
