--- a/docs/css/album.css
+++ b/docs/css/album.css
@@ -30,22 +30,23 @@
 /* CARDS */
 .card {
   align-items: center;
+  height: 400px;
 }
 .card-img-top {
-  height: 225px;
+  height: 220px;
   /* width: 150px; */
   width: auto;
 }
 .card-body {
   text-align: center;
-  padding: 1.1rem;
+  padding: 1rem;
 }
 .card-title {
   font-size: .9rem;
   margin-bottom: .1rem;
 }
  .card-text {
-   font-size: .9rem;
+   font-size: .8rem;
    margin-bottom: .2rem;
    line-height: 1rem;
  }
@@ -60,6 +61,9 @@ small.name {
   margin-left: 120px;
 }
 
+.btn-primary {
+  background-color: purple;
+}
 .btn-secondary {
     color: #343a40;
     /* background-color: #fff; */
