--- a/meteor/simple-structure/components/card.html
+++ b/meteor/simple-structure/components/card.html
@@ -1,4 +1,4 @@
-<!-- <template name="card"> -->
+<template name="card">
 
 <!--
 category
@@ -11,9 +11,14 @@ gridorder?
 basecode
 -->
 
-  <!-- <div class=" grid-item element-item category-class function-class family-class" data-category="">
+  <div class=" grid-item element-item category-class function-class family-class" data-category="">
     <div class="card mb-4 shadow-sm ">
-      <p class="card-title"> {{>name}} </p>
+
+      {{#each items}}
+        {{> item}}
+      {{/each}}
+
+      <!-- <p class="card-title"> {{>name}} </p>
       <small class="text-muted neworder" data-isotope=""> {{>basecode}} </small>
       <img class="card-img-top" src="{{>url}}" alt="">
       <div class="card-body">
@@ -25,8 +30,9 @@ basecode
           </div>
           <small class="text-muted name"> {{>manufacturer}} </small>
         </div>
-      </div>
+      </div> -->
+
     </div>
   </div>
 
-</template> -->
+</template>
