--- a/react/neworder/src/App.css
+++ b/react/neworder/src/App.css
@@ -6,7 +6,7 @@
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
-
+.grid-item{float: left}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
