--- a/react/neworder/src/components/Menu/Menu.scss
+++ b/react/neworder/src/components/Menu/Menu.scss
@@ -50,20 +50,25 @@
         border: 2px solid $primary-border-color;
 
 
-        button{
+        button.btn{
             &:focus{
                 box-shadow: none;
             }
-        }
 
-        button{
             background: white;
             width: 100%;
             border-radius: 0;
             color: #000;
             text-transform: capitalize;
             border: none;
+
+            &.active{
+                background-color: $color-mustard;
+                color: $color-white;
+            }
         }
+
+
 
 
         .collapse{
@@ -71,6 +76,18 @@
             button:first-of-type{
                 border-top: 1px solid $primary-border-color ;
             }
+        }
+    }
+
+}
+.navbar{
+    background: $primary-background-color;
+    height: 50px;
+
+    .navbar-nav{
+        flex-direction: row;
+        .nav-btn{
+            height: 45px;
         }
     }
 
