--- a/react/neworder/src/GridOrder.scss
+++ b/react/neworder/src/GridOrder.scss
@@ -15,6 +15,7 @@ $primary-text-hover-color: $color-white;
 @import 'components/Menu/Menu';
 @import 'components/FileUploader/FileUploader';
 @import 'components/ProductGrid/Product';
+
 #page {
   &.no-grid {
     display: flex;
@@ -37,21 +38,27 @@ $primary-text-hover-color: $color-white;
     padding: 0;
   }
 
-  .button {
+  .btn,button{
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
+  }
+  .btn {
     border-radius: 3px;
     margin: 0;
     cursor: pointer;
     transition: 0.5s background-color, 0.5s color;
-    &:focus {
-      outline: none;
-    }
+
     &.yellow-button {
       background-color: $color-mustard;
       color: $color-white;
+      border: 2px solid $color-white;
     }
     &.white-button {
       color: $color-gray;
       background-color: $color-white;
+      border: 2px solid $color-mustard;
 
       &:hover {
         background: $color-mustard;
