--- a/react/neworder/src/App.scss
+++ b/react/neworder/src/App.scss
@@ -63,6 +63,12 @@ $color-gray: #363636;
 
 }
 
-
+#page-content {
+  background: white;
+  max-width: 730px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
 
 
