--- a/react/neworder/src/components/Header/Header.scss
+++ b/react/neworder/src/components/Header/Header.scss
@@ -3,25 +3,7 @@
     padding: 0;
 
 
-    #logo{
-        background: white;
-        padding: 20px;
-        position: absolute;
-        height: 148px;
-        border: 1px solid black;
-        vertical-align: middle;
-        /* line-height: 300px; */
-        color: black;
-        font-size: 50px;
-        max-width: 192px;
-        display: block;
-        white-space: normal;
-        top: 0;
-        z-index: 99;
-        text-align: center;
-        font-weight: bold;
-        line-height: 39px;
-    }
+    width: 100%;
 
 
 
