--- a/react/neworder/src/App.scss
+++ b/react/neworder/src/App.scss
@@ -15,9 +15,7 @@
 
   }
 
-  #page-content {
-    padding: 0;
-  }
+
   .row, .col {
     margin: 0;
     padding: 0;
@@ -46,7 +44,9 @@
   max-width: 730px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  padding: 0;
 }
 
 
