Added loader icon, tweaks to the sort logic

--- a/react/neworder/src/components/GridControls/FileUploader/FileUploader.scss
+++ b/react/neworder/src/components/GridControls/FileUploader/FileUploader.scss
@@ -1,4 +1,15 @@
+#loader-icon{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+}
 
+body.loading{
+    #loader-icon{
+        display: block!important;
+    }
+}
 
 .file-upload-wrapper{
     .file-upload-button{
