--- a/react/neworder/src/App.scss
+++ b/react/neworder/src/App.scss
@@ -34,6 +34,7 @@
 #page-content{
   background: white;
   max-width: 730px;
+  width: 730px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
