--- a/react/neworder/src/components/GridControls/FileUploader/FileUploader.scss
+++ b/react/neworder/src/components/GridControls/FileUploader/FileUploader.scss
@@ -1,3 +1,4 @@
+
 #loader-icon{
     display: none;
     position: fixed;
@@ -12,6 +13,9 @@ body.loading{
 }
 
 .file-upload-wrapper{
+    max-width: 730px;
+
+
     .file-upload-button{
         position:absolute;
         top: -1000px;
@@ -23,7 +27,8 @@ body.loading{
 
         display: inline-block;
 
-
+        background: #ddd;
+        border: 1px solid #6c757d;
 
 
     }
