--- a/react/neworder/src/components/GridControls/GridControls.scss
+++ b/react/neworder/src/components/GridControls/GridControls.scss
@@ -4,9 +4,14 @@
         margin-top: 10px;
 
         .btn-group{
-            .filter-option:not(:last-of-type){
-                margin-right: 5px;
-                font-style: initial;
+
+            .filter-option{
+                margin-top: 5px;
+                &:not(:last-of-type){
+                    margin-right: 5px;
+
+                    font-style: initial;
+                }
             }
         }
 
