adds multiple packery modules

--- a/react/neworder/src/App.css
+++ b/react/neworder/src/App.css
@@ -33,3 +33,81 @@
 
 /* ALBUM */
 
+.card {
+  width: 240px;
+}
+ /* ================================== */
+
+/* 1. PACKERY IMPLEMENTATION */
+* { box-sizing: border-box; } 
+
+body { font-family: sans-serif; }
+
+/* ---- grid ---- */
+
+.grid {
+  background: #DDD;
+  max-width: 1200px;
+}
+
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .grid-item ---- */
+
+.grid-item {
+  float: left;
+  width: 240px;
+  height: 300px;
+  background: #C09;
+  border: 2px solid hsla(0, 0%, 0%, 0.5);
+}
+
+.grid-item--width2 { width: 200px; }
+.grid-item--height2 { height: 200px; }
+
+.grid-item:hover {
+  border-color: hsla(0, 0%, 100%, 0.5);
+  cursor: move;
+}
+
+.grid-item.is-dragging,
+.grid-item.is-positioning-post-drag {
+  background: #C90;
+  z-index: 2;
+}
+
+.packery-drop-placeholder {
+  outline: 3px dashed hsla(0, 0%, 0%, 0.5);
+  outline-offset: -6px;
+  -webkit-transition: -webkit-transform 0.2s;
+          transition: transform 0.2s;
+}
+
+/* END */
+
+.react-draggable {
+  float: left;
+  width: 240px;
+  height: 300px;
+  background: #C09;
+  border: 2px solid hsla(0, 0%, 0%, 0.5);
+}
+
+.react-draggable--width2 { width: 200px; }
+.react-draggable--height2 { height: 200px; }
+
+.react-draggable:hover {
+  border-color: hsla(0, 0%, 100%, 0.5);
+  cursor: move;
+}
+
+.react-draggable.is-dragging,
+.react-draggable.is-positioning-post-drag {
+  background: #C90;
+  z-index: 2;
+}
